testdata/typechecker/error/Div.java
int main() {
	    int x;
        x = 123 / null;
		return 0;
}

